Use common properties, fix radio buttons, and add remaining character types

--- a/adapter/in/src/main/resources/templates/confirm.mustache
+++ b/adapter/in/src/main/resources/templates/confirm.mustache
@@ -5,7 +5,7 @@
       <form action="/delete/{{owningUserId}}/{{id}}" method="post">
         <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
         <br/>
-        <div class="form-group">
+        <div class="govuk-form-group">
           <button type="submit" data-prevent-double-click="true" class="govuk-button" data-module="govuk-button">
             Confirm
           </button>
