Add errors and previous answers

--- a/adapter/in/src/main/resources/templates/layouts/base.mustache
+++ b/adapter/in/src/main/resources/templates/layouts/base.mustache
@@ -11,6 +11,7 @@
       </div>
     </div>
     <main class="govuk-main-wrapper--l main-content">
+      {{$preTitle}}{{/preTitle}}
       {{$title}}
         <h1 class="govuk-heading-l">
           {{#i18n}}{{groupStem}}.title{{/i18n}}
