--- a/adapter/in/src/main/resources/templates/question-page.mustache
+++ b/adapter/in/src/main/resources/templates/question-page.mustache
@@ -1,4 +1,9 @@
 {{<layouts/base}}
+  {{$preTitle}}
+    {{#hasErrors}}
+      {{>partials/_error-summary}}
+    {{/hasErrors}}
+  {{/preTitle}}
   {{$title}}
     {{^hasOneQuestion}}
       <h1 class="govuk-heading-l">
