--- a/adapter/in/src/main/resources/templates/partials/_question.mustache
+++ b/adapter/in/src/main/resources/templates/partials/_question.mustache
@@ -1,28 +1,36 @@
-<div class="govuk-form-group">
+<div class="govuk-form-group {{#hasError}}govuk-form-group--error{{/hasError}}">
   {{#isInput}}
     <{{#hasOneQuestion}}h1{{/hasOneQuestion}}{{^hasOneQuestion}}h2{{/hasOneQuestion}} class="govuk-label-wrapper">
       <label class="govuk-label govuk-label--l" for="{{questionId}}">
-        {{#i18n}}{{groupStem}}.{{questionId}}.question '{{#questionArgs}}{{#i18n}}{{.}}{{/i18n}} {{/questionArgs}}'{{/i18n}}
+        {{#i18n}}{{groupStem}}.{{questionId}}.question '{{#questionArgs}}{{#i18n}}{{.}}{{/i18n}};{{/questionArgs}}'{{/i18n}}
       </label>
     </{{#hasOneQuestion}}h1{{/hasOneQuestion}}{{^hasOneQuestion}}h2{{/hasOneQuestion}}>
-    <input class="govuk-input govuk-input--width-20" id="{{questionId}}" name="{{questionId}}" type="{{#type}}{{.}}{{/type}}{{^type}}text{{/type}}">
+    {{#hasError}}
+      <p id="full-name-input-error" class="govuk-error-message">
+        <span class="govuk-visually-hidden">Error:</span> {{#i18n}}{{groupStem}}.{{errorProperty}}{{/i18n}}
+      </p>
+    {{/hasError}}
+    <input class="govuk-input govuk-input--width-20" id="{{questionId}}"
+           name="{{questionId}}"
+           type="{{#type}}{{.}}{{/type}}{{^type}}text{{/type}}"
+           value={{#previousAnswer}}{{previousAnswer}}{{/previousAnswer}}>
   {{/isInput}}
   {{#isRadioButton}}
     <fieldset class="govuk-fieldset">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
         <{{#hasOneQuestion}}h1{{/hasOneQuestion}}{{^hasOneQuestion}}h2{{/hasOneQuestion}} class="govuk-fieldset__heading">
-          {{#i18n}}{{groupStem}}.{{questionId}}.question '{{#questionArgs}}{{#i18n}}{{.}}{{/i18n}} {{/questionArgs}}'{{/i18n}}
+          {{#i18n}}{{groupStem}}.{{questionId}}.question '{{#questionArgs}}{{#i18n}}{{.}}{{/i18n}};{{/questionArgs}}'{{/i18n}}
         </{{#hasOneQuestion}}h1{{/hasOneQuestion}}{{^hasOneQuestion}}h2{{/hasOneQuestion}}>
       </legend>
       <div class="govuk-radios" data-module="govuk-radios">
-        {{#values}}
+        {{#options}}
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="{{questionId}}-{{name}}" name="{{questionId}}" type="radio" value={{name}}>
-            <label class="govuk-label govuk-radios__label" for="{{questionId}}-{{name}}">
-              {{#i18n}}{{name}}{{/i18n}}
+            <input class="govuk-radios__input" id="{{questionId}}-{{value}}" name="{{questionId}}" type="radio" value={{value}} {{#isSelected}}checked{{/isSelected}}>
+            <label class="govuk-label govuk-radios__label" for="{{questionId}}-{{value}}">
+              {{#i18n}}{{value}}{{/i18n}}
             </label>
           </div>
-        {{/values}}
+        {{/options}}
       </div>
     </fieldset>
   {{/isRadioButton}}
