--- a/adapter/in/src/main/resources/templates/layouts/base.mustache
+++ b/adapter/in/src/main/resources/templates/layouts/base.mustache
@@ -2,6 +2,7 @@
   <!DOCTYPE HTML>
 
   {{$head}}{{>partials/_header}}{{/head}}
+  {{#hasNavigation}}{{>partials/_navigation}}{{/hasNavigation}}
 
   <body>
   <div class="govuk-width-container">
