Add crew - better

--- a/adapter/in/src/main/resources/templates/partials/_input.mustache
+++ b/adapter/in/src/main/resources/templates/partials/_input.mustache
@@ -11,4 +11,4 @@
 <input class="govuk-input govuk-input--width-20" id="{{questionId}}"
        name="{{questionId}}"
        type="{{#type}}{{.}}{{/type}}{{^type}}text{{/type}}"
-       value={{#previousAnswer}}{{previousAnswer}}{{/previousAnswer}}>
+       value="{{#previousAnswer}}{{previousAnswer}}{{/previousAnswer}}">
